# route53_dd

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  flake.nix  result
.github/workflows/: docker-publish.yml  main.yml
src/: credential_provider.rs  main.rs
